--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "landing_page_test",
+  "name": "Assignment WebTech",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
